Tidy the event box HTML and fix alignment issue
Each event card now contains a `<header>` and `<footer>` element at the
top and bottom with the content between. The icons and textual
descriptions are lined up using `display: table` to prevent long
descriptions (like 'School or University Event') from spilling onto
the next line.

--- a/app/webpacker/styles/components/event-box.scss
+++ b/app/webpacker/styles/components/event-box.scss
@@ -69,37 +69,30 @@
       background-color: $yellow;
     }
 
-    &__content {
-        
-        &__icon {
-            vertical-align: middle;
-            margin-right: 2px;
-            width: 40px;
-        }
+    &__content p {
+      font-size: 17px;
+      margin-bottom: 0;
+    }
 
-        &__location {
-          display: flex;
-        
-          p {
-            margin: 7px 0 0 0;
-          }
-        }
+    &__footer {
+        display: table;
+        border-spacing: 12px 16px;
 
-        h5 {
-          margin: 15px 0 0 0;
-        }
+        .event-box__footer {
+            &__item {
+              display: table-row;
+            }
 
-        p {
-            margin: 0;
-            font-size: 17px;
-        }
+            &__icon,
+            &__meta {
+              display: table-cell;
+              vertical-align: middle;
+            }
 
-        &__location {
-          display: flex;
-
-          p {
-            margin: 7px 0 0 0;
-          }
+            &__meta {
+                font-size: smaller;
+                font-weight: 800;
+            }
         }
     }
 }
